--- a/index.html
+++ b/index.html
@@ -40,6 +40,14 @@
                   </div>
                 </div>
               </li>
+              <li class="pdf-item">
+                <div class="pdf-meta">
+                  <span class="pdf-title">Lezione 1 - Progetto</span>
+                  <div class="pdf-actions">
+                    <a class="pdf-link" href="slides/LaTeXLab_Progetto.pdf" target="_blank" rel="noopener">Apri</a>
+                  </div>
+                </div>
+              </li>
             </ul>
           </article>
 
