second lesson material

--- a/index.html
+++ b/index.html
@@ -48,20 +48,28 @@
                   </div>
                 </div>
               </li>
+              <li class="pdf-item">
+                <div class="pdf-meta">
+                  <span class="pdf-title">Lezione 2 - Approfondimenti e esempi reali</span>
+                  <div class="pdf-actions">
+                    <a class="pdf-link" href="slides/LaTeXLab_2.pdf" target="_blank" rel="noopener">Apri</a>
+                  </div>
+                </div>
+              </li>
             </ul>
           </article>
 
           <article class="list-block full-page">
             <h3>Soluzioni Esercizi</h3>
             <ul class="pdf-list">
-              <!--<li class="pdf-item">
+              <li class="pdf-item">
                 <div class="pdf-meta">
-                  <span class="pdf-title">Esercizio 1 - Soluzioni</span>
+                  <span class="pdf-title">Progetto - Soluzione</span>
                   <div class="pdf-actions">
-                    <a class="pdf-link" href="exercises/ex1_solutions.pdf" target="_blank" rel="noopener">Apri</a>
+                    <a class="pdf-link" href="exercises/LaTeXLab_Progetto_Soluzione.zip" target="_blank" rel="noopener">Scarica</a>
                   </div>
                 </div>
-              </li>-->
+              </li>
             </ul>
           </article>
         </div>
