--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </li>
               <li class="pdf-item">
                 <div class="pdf-meta">
-                  <span class="pdf-title">Lezione 1 - Progetto</span>
+                  <span class="pdf-title">Lezione 1 - Progetto da riprodurre</span>
                   <div class="pdf-actions">
                     <a class="pdf-link" href="slides/LaTeXLab_Progetto.pdf" target="_blank" rel="noopener">Apri</a>
                   </div>
