update material and texts

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="site-header">
       <div class="container">
         <h1>LaTeXLab</h1>
-        <p class="subtitle">Materiale del corso: slides e soluzioni degli esercizi</p>
+        <p class="subtitle">Materiale del corso: slides, esercizi, soluzioni e registrazioni video.</p>
       </div>
     </header>
 
@@ -18,41 +18,33 @@
       <section class="about">
         <h2>LaTeXLab: L'arte della Scrittura Accademica</h2>
         <p>
-          LaTeXLab nasce con l'obiettivo di potenziare le competenze nella scrittura e nella formattazione di documenti accademici, offrendo un corso dedicato a studenti, dottorandi e docenti della Sapienza. Il corso si concentra sull'apprendimento di LaTeX, un linguaggio avanzato per la preparazione di tesi, articoli di ricerca, presentazioni e altri elaborati scientifici.
+          LaTeXLab è nato con l’obiettivo di potenziare le competenze nella scrittura e nella formattazione di
+          documenti accademici, offrendo un corso dedicato a studenti, dottorandi e docenti della Sapienza. Il
+          corso si è concentrato sull’apprendimento di LaTeX, un linguaggio avanzato per la preparazione di tesi,
+          articoli di ricerca, presentazioni e altri elaborati scientifici.
         </p>
-
-        <p>
-          Si partirà dai concetti fondamentali di LaTeX: struttura del documento, gestione di formule matematiche, tabelle e bibliografie, per poi arrivare a un laboratorio pratico con esercitazioni guidate e attività interattive, durante le quali i partecipanti realizzeranno in tempo reale documenti formattati applicando le tecniche appena acquisite. Ci sarà poi una sessione dedicata all’esplorazione di pacchetti avanzati per la personalizzazione degli stili, l’inserimento di grafici e la collaborazione su documenti complessi. Verranno presentati esempi reali di tesi e articoli scientifici per mostrare l’impatto di LaTeX nell’innovazione della scrittura accademica.
-        </p>
-
       </section>
 
       <section class="materials">
+        <h3>Materiale</h3>
+
         <div class="materials-grid">
           <article class="list-block full-page">
-            <h3>Slides delle Lezioni</h3>
+            <h3>Slides</h3>
             <ul class="pdf-list">
               <li class="pdf-item">
                 <div class="pdf-meta">
                   <span class="pdf-title">Lezione 1 - Fondamenti di LaTeX</span>
                   <div class="pdf-actions">
-                    <a class="pdf-link" href="slides/LaTeXLab_1.pdf" target="_blank" rel="noopener">Apri</a>
+                    <a class="pdf-link" href="slides/LaTeXLab_1.pdf" target="_blank" rel="noopener">Visualizza PDF</a>
                   </div>
                 </div>
               </li>
               <li class="pdf-item">
                 <div class="pdf-meta">
-                  <span class="pdf-title">Lezione 1 - Progetto da riprodurre</span>
+                  <span class="pdf-title">Lezione 2 - Approfondimenti e applicazioni reali</span>
                   <div class="pdf-actions">
-                    <a class="pdf-link" href="slides/LaTeXLab_Progetto.pdf" target="_blank" rel="noopener">Apri</a>
-                  </div>
-                </div>
-              </li>
-              <li class="pdf-item">
-                <div class="pdf-meta">
-                  <span class="pdf-title">Lezione 2 - Approfondimenti e esempi reali</span>
-                  <div class="pdf-actions">
-                    <a class="pdf-link" href="slides/LaTeXLab_2.pdf" target="_blank" rel="noopener">Apri</a>
+                    <a class="pdf-link" href="slides/LaTeXLab_2.pdf" target="_blank" rel="noopener">Visualizza PDF</a>
                   </div>
                 </div>
               </li>
@@ -60,13 +52,67 @@
           </article>
 
           <article class="list-block full-page">
-            <h3>Soluzioni Esercizi</h3>
+            <h3>Esercizi e Soluzioni</h3>
             <ul class="pdf-list">
               <li class="pdf-item">
                 <div class="pdf-meta">
-                  <span class="pdf-title">Progetto - Soluzione</span>
+                  <span class="pdf-title">Progetto - Documento da riprodurre</span>
                   <div class="pdf-actions">
-                    <a class="pdf-link" href="exercises/LaTeXLab_Progetto_Soluzione.zip" target="_blank" rel="noopener">Scarica</a>
+                    <a class="pdf-link" href="slides/LaTeXLab_Progetto.pdf" target="_blank" rel="noopener">Visualizza PDF</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <ul class="pdf-list">
+              <li class="pdf-item">
+                <div class="pdf-meta">
+                  <span class="pdf-title">Progetto - Codice soluzione</span>
+                  <div class="pdf-actions">
+                    <a class="pdf-link" href="exercises/LaTeXLab_Progetto_Soluzione.zip" target="_blank" rel="noopener">Scarica archivio .zip</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <ul class="pdf-list">
+              <li class="pdf-item">
+                <div class="pdf-meta">
+                  <span class="pdf-title">Progetto - Video soluzione</span>
+                  <div class="pdf-actions">
+                    <a class="pdf-link" href="https://www.youtube.com/watch?v=Bp8ycurrEUw&list=PL-QX5Ap5J6lh-o8vkWKXjn2d2CqkKRTvK&index=1" target="_blank" rel="noopener">Guarda su YouTube</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </article>
+
+          <article class="list-block full-page">
+            <h3>Registrazioni Interventi</h3>
+            <ul class="pdf-list">
+              <li class="pdf-item">
+                <div class="pdf-meta">
+                  <span class="pdf-title">Comandi e template personalizzati in LaTeX – Alessio Bandiera e Simone Bianco</span>
+                  <div class="pdf-actions">
+                    <a class="pdf-link" href="https://www.youtube.com/watch?v=atUSr6CrJ60&list=PL-QX5Ap5J6lh-o8vkWKXjn2d2CqkKRTvK&index=2" target="_blank" rel="noopener">Guarda su YouTube</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <ul class="pdf-list">
+              <li class="pdf-item">
+                <div class="pdf-meta">
+                  <span class="pdf-title">Relazioni di tirocinio e tesi in LaTeX (sapthesis) – Lorenzo Antonelli</span>
+                  <div class="pdf-actions">
+                    <a class="pdf-link" href="https://www.youtube.com/watch?v=aBsTexeejkc&list=PL-QX5Ap5J6lh-o8vkWKXjn2d2CqkKRTvK&index=3" target="_blank" rel="noopener">Guarda su YouTube</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <ul class="pdf-list">
+              <li class="pdf-item">
+                <div class="pdf-meta">
+                  <span class="pdf-title">Ricerca scientifica e articoli scientifici in LaTeX — Gabriella Trasciatti</span>
+                  <div class="pdf-actions">
+                    <a class="pdf-link" href="https://www.youtube.com/watch?v=IGEtipu3qd8&list=PL-QX5Ap5J6lh-o8vkWKXjn2d2CqkKRTvK&index=4" target="_blank" rel="noopener">Guarda su YouTube</a>
                   </div>
                 </div>
               </li>
@@ -74,19 +120,15 @@
           </article>
         </div>
       </section>
-
     </main>
-
-    
 
     <footer class="site-footer">
       <div class="container">
         <p>
-            LaTeXLab rientra tra le iniziative culturali e sociali degli studenti della Sapienza, ed è organizzata dai rappresentanti della lista studentesca "DI Help Desk".
+            LaTeXLab rientra tra le iniziative culturali e sociali degli studenti della Sapienza, ed è stata organizzata da Michele Vincenzo Gentile e Matteo Collica (Rappresentanti degli Studenti in Assemblea di Facoltà I3S con la lista studentesca "DI Help Desk").
         </p>
         <small>© 2025 MiViGe. All rights reserved.</small>
       </div>
     </footer>
-
   </body>
 </html>
