fix buttons size

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="pdf-meta">
                   <span class="pdf-title">Lezione 1 - Fondamenti di LaTeX</span>
                   <div class="pdf-actions">
-                    <a class="pdf-link" href="slides/LaTeXLab_1.pdf" target="_blank" rel="noopener">Visualizza PDF</a>
+                    <a class="pdf-link" href="slides/LaTeXLab_1.pdf" target="_blank" rel="noopener">Apri</a>
                   </div>
                 </div>
               </li>
@@ -44,7 +44,7 @@
                 <div class="pdf-meta">
                   <span class="pdf-title">Lezione 2 - Approfondimenti e applicazioni reali</span>
                   <div class="pdf-actions">
-                    <a class="pdf-link" href="slides/LaTeXLab_2.pdf" target="_blank" rel="noopener">Visualizza PDF</a>
+                    <a class="pdf-link" href="slides/LaTeXLab_2.pdf" target="_blank" rel="noopener">Apri</a>
                   </div>
                 </div>
               </li>
@@ -58,7 +58,7 @@
                 <div class="pdf-meta">
                   <span class="pdf-title">Progetto - Documento da riprodurre</span>
                   <div class="pdf-actions">
-                    <a class="pdf-link" href="slides/LaTeXLab_Progetto.pdf" target="_blank" rel="noopener">Visualizza PDF</a>
+                    <a class="pdf-link" href="slides/LaTeXLab_Progetto.pdf" target="_blank" rel="noopener">Apri</a>
                   </div>
                 </div>
               </li>
@@ -68,7 +68,7 @@
                 <div class="pdf-meta">
                   <span class="pdf-title">Progetto - Codice soluzione</span>
                   <div class="pdf-actions">
-                    <a class="pdf-link" href="exercises/LaTeXLab_Progetto_Soluzione.zip" target="_blank" rel="noopener">Scarica archivio .zip</a>
+                    <a class="pdf-link" href="exercises/LaTeXLab_Progetto_Soluzione.zip" target="_blank" rel="noopener">Scarica</a>
                   </div>
                 </div>
               </li>
@@ -78,7 +78,7 @@
                 <div class="pdf-meta">
                   <span class="pdf-title">Progetto - Video soluzione</span>
                   <div class="pdf-actions">
-                    <a class="pdf-link" href="https://www.youtube.com/watch?v=Bp8ycurrEUw&list=PL-QX5Ap5J6lh-o8vkWKXjn2d2CqkKRTvK&index=1" target="_blank" rel="noopener">Guarda su YouTube</a>
+                    <a class="pdf-link" href="https://www.youtube.com/watch?v=Bp8ycurrEUw&list=PL-QX5Ap5J6lh-o8vkWKXjn2d2CqkKRTvK&index=1" target="_blank" rel="noopener">Guarda</a>
                   </div>
                 </div>
               </li>
@@ -92,7 +92,7 @@
                 <div class="pdf-meta">
                   <span class="pdf-title">Comandi e template personalizzati in LaTeX – Alessio Bandiera e Simone Bianco</span>
                   <div class="pdf-actions">
-                    <a class="pdf-link" href="https://www.youtube.com/watch?v=atUSr6CrJ60&list=PL-QX5Ap5J6lh-o8vkWKXjn2d2CqkKRTvK&index=2" target="_blank" rel="noopener">Guarda su YouTube</a>
+                    <a class="pdf-link" href="https://www.youtube.com/watch?v=atUSr6CrJ60&list=PL-QX5Ap5J6lh-o8vkWKXjn2d2CqkKRTvK&index=2" target="_blank" rel="noopener">Guarda</a>
                   </div>
                 </div>
               </li>
@@ -102,7 +102,7 @@
                 <div class="pdf-meta">
                   <span class="pdf-title">Relazioni di tirocinio e tesi in LaTeX (sapthesis) – Lorenzo Antonelli</span>
                   <div class="pdf-actions">
-                    <a class="pdf-link" href="https://www.youtube.com/watch?v=aBsTexeejkc&list=PL-QX5Ap5J6lh-o8vkWKXjn2d2CqkKRTvK&index=3" target="_blank" rel="noopener">Guarda su YouTube</a>
+                    <a class="pdf-link" href="https://www.youtube.com/watch?v=aBsTexeejkc&list=PL-QX5Ap5J6lh-o8vkWKXjn2d2CqkKRTvK&index=3" target="_blank" rel="noopener">Guarda</a>
                   </div>
                 </div>
               </li>
@@ -112,7 +112,7 @@
                 <div class="pdf-meta">
                   <span class="pdf-title">Ricerca scientifica e articoli scientifici in LaTeX — Gabriella Trasciatti</span>
                   <div class="pdf-actions">
-                    <a class="pdf-link" href="https://www.youtube.com/watch?v=IGEtipu3qd8&list=PL-QX5Ap5J6lh-o8vkWKXjn2d2CqkKRTvK&index=4" target="_blank" rel="noopener">Guarda su YouTube</a>
+                    <a class="pdf-link" href="https://www.youtube.com/watch?v=IGEtipu3qd8&list=PL-QX5Ap5J6lh-o8vkWKXjn2d2CqkKRTvK&index=4" target="_blank" rel="noopener">Guarda</a>
                   </div>
                 </div>
               </li>
